--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -72,6 +72,7 @@
 
 \newcommand{\nnote}[1]{{\color{red}[\textbf{Nils} #1 ]}}
 \newcommand{\gnote}[1]{{\color{red}[\textbf{Gotti:} #1]}}
+\newcommand{\znote}[1]{{\color{red}[\textbf{Zhenfei:} #1]}}
 
 % spaces
 
