--- a/openproblems.tex
+++ b/openproblems.tex
@@ -10,7 +10,7 @@ still, these are kind-of useful for giving perspective.
 
 \section{Efficient encoding via small elements in 2-norm}
 
-Let $\Field_p$ be some prime field, $n>0$ and consider some $n$-dimensional $\Field_p$-algebra $R$. In practise, $R$ will be a cyclotomic extension of $\Field_p$ with $n$ a power of 2 and we consider the 2-norm on $R$ by looking at individual coefficients wrt.\ some canonical representation as polynomials.
+Let $\Field_p$ be some prime field, $n>0$ and consider some $n$-dimensional $\Field_p$-algebra $R$. In practise, $R$ will be a cyclotomic extension of $\Field_p$ with $n$ a power of two and we consider the 2-norm on $R$ by looking at individual coefficients wrt.\ some canonical representation as polynomials.
 
 What we want to find is some $m$ and an $R$-linear map
 \[
