--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -102,8 +102,8 @@ While conceptually simple, we show that this change allows us to significantly r
 \paragraph{Encoded Openings.}
 Given a Merkle tree, one can provide an opening for leaf $i$ by revealing all nodes that are adjacent to those on the path from leaf $i$ to the root.
 The nodes on the path can then be computed from the given information.
-Computing openings for the unaggregated homomorphic vector commitment construction of Squirrel as well as ours works essentially the same way.
-For Squirrel's and our aggregated vector commitments, the situation is unfortunately different.
+Computing openings for the {\em unaggregated} homomorphic vector commitment construction of Squirrel as well as ours works essentially the same way.
+For Squirrel's and our {\em aggregated} vector commitments, the situation is unfortunately different.
 Once we start aggregating trees or openings, we need to explicitly compute the nodes on the path and provide them as part of the aggregated opening, which doubles the size of our openings if done naively.
 
 In Chipmunk, we present a new compression algorithm, inspired by Babai's nearest plane algorithm~\cite{DBLP:journals/combinatorica/Babai86}, which allows us to compress the size of our openings.
@@ -127,8 +127,8 @@ While each individual improvement may seem conceptually simple, they all add up 
 
 
 \paragraph{New Results in Full Version.}
-We note that the full version of this paper contains a new result, namely the encoding of vector commitment openings, which is not present in our CCS 2023 proceedings version of this paper.
-This new result improves our signature sizes by roughly a factor of $1/3$, when compared with the aggregate signature sizes we achieved in our proceedings paper.
+We note that the full version of this paper contains a new result, the encoding of vector commitment openings mentioned above, which is not present in our CCS 2023 proceedings version of this paper.
+This new result improves our signature sizes by roughly a factor of $1/5$, when compared with the aggregate signature sizes we achieved in our proceedings paper.
 \eprint{You are currently reading the full version.}
 
 
