--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -127,7 +127,7 @@ Define vectors $\vec{b}_\qbasis$ and $\vec{b}_1,\ldots,\vec{b}_{\limbs-1} \in \r
 \ldots\\
 \vec{b}_{\limbs-1}&=(0,0,\ldots,0, -(2\eta+1), 1)\enspace.
 \end{align*}
-Then $\latring$ and $\latmodular$ are $\ring$-module lattices. A basis (over $\ring$) for $\latring$ is given by $\kernelbasis \coloneqq \{\vec{b}_1,\ldots,\vec{b}_{\limbs-1}\}$ and
+Then $\latring$ and $\latmodular$ are $\ring$-module lattices (i.e.\ lattices that are also free $\ring$-modules). A basis (over $\ring$) for $\latring$ is given by $\kernelbasis \coloneqq \{\vec{b}_1,\ldots,\vec{b}_{\limbs-1}\}$ and
 a basis over $\ring$ for $\latmodular$ is given by $\{\vec{b}_\qbasis,\vec{b}_1,\ldots,\vec{b}_{\limbs-1}\}$.
 \end{proposition}
 \begin{proof}
