--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -109,7 +109,7 @@ Once we start aggregating trees or openings, we need to explicitly compute the n
 In Chipmunk, we present a new compression algorithm, inspired by Babai's nearest plane algorithm~\cite{DBLP:journals/combinatorica/Babai86}, which allows us to compress the size of our openings.
 Instead of additionally sending the nodes on the path, we only send the adjacent nodes and some small hints, which allow us reconstruct all needed node values.
 We believe that this technique may be of independent interest and could find applications outside of our construction.
-\gnote{TODO: Review reference to Babai}
+% \gnote{TODO: Review reference to Babai}
 
 
 \paragraph{Chipmunk Multi-Signatures.}
