--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 
 % temporarily set both to true
 % \camerareadytrue
-\camerareadytrue
+\camerareadyfalse
 \eprinttrue
 % \eprintfalse
 
@@ -130,7 +130,7 @@ We significantly improve upon the previously best known construction in this set
 Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.}
 \eprint{
 Our aggregate signature size is $5.6 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size around $136$ KB.
-\gnote{Check}
+% \gnote{Check}
 }
 We provide a full implementation of Chipmunk and provide extensive benchmarks studying our construction's efficiency.
 
@@ -164,7 +164,7 @@ We provide a full implementation of Chipmunk and provide extensive benchmarks st
 \begin{appendix}
   \input{sections/appconstraints}
   \ifeprint
-  \input{sections/eth}
+%   \input{sections/eth}
   \fi
 \end{appendix}
 \end{document}
