--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -478,7 +478,7 @@ This is trivially satisfied by any decomposition of an element from $\ring_q$ an
 If we did not require this, a dishonestly generated signature could choose $\vec{p}_j$ as the decomposition of an element whose coefficients are not in $\{-\tfrac{q-1}{2},\ldots,\tfrac{q-1}{2}\}$, but still bounded by $\frac{(2\eta+1)^\limbs-1}{2}$.
 % This may be possible because $q \neq (2\eta+1)^\limbs$.
 In particular, if $q$ is significantly smaller than $(2\eta+1)^\limbs$, adding this condition actually gives a stronger shortness bound for the most significant limbs of the decomposition.
-These tighter bounds are not present in Squirrel or in the extended abstract of this work\cite{TODO}, but they significantly help to make our encoding of openings both more efficient and easier to analyze later.%
+These tighter bounds are not present in Squirrel or in the extended abstract of this work, but they significantly help to make our encoding of openings both more efficient and easier to analyze later.%
 }
 \cameraready{%
 \item The full version of this work\cite{TODO} contains a encoding scheme to transmit decommitments more efficiently. This requires some extra bounds checks on $\projring(\vec{p}_j)$ and $\projring(\vec{s}_j)$ inside $\verify$, which are not present here.
@@ -896,7 +896,8 @@ Each element is $\norm{.}_\infty$-bounded: for individually verifying openings, 
 \footnote{%
 We need here that $\projmod{q}(\vec{p}_j)$ uniquely determines $\vec{p}_j$. This is the case for \emph{honestly generated}, unaggregated commitments. Note that we require them to be honestly generated rather than individually verifying: a dishonest committer could choose some $\vec{p}_j$ with a coordinate $x$ that is not fully reduced modulo $q$ but still satisfies $\abs{\projring(x)} < \eta$. In that case, $\projmod{q}(\vec{p}_j)$ only determines $\vec{p}_j \bmod q$, which is not enough.%
 }
-unaggregated commitments, we can actually do better: as in a usual Merkle tree opening, we do not need the $\vec{p}_j$'s as part of the decommitments but only the $\vec{s}_j$'s, as the verifier can actually compute all $\projmod{q}(\vec{p}_j)$ by themselves and the $\projmod{q}(\vec{p}_j)$ uniquely determine the $\vec{p}_j$. This means that only $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$ bits need to be transmitted. In the full version\cite{TODO}, we present a generalization of this trick that can also be applied to aggregated decommitments.
+unaggregated commitments, we can actually do better: as in a usual Merkle tree opening, we do not need the $\vec{p}_j$'s as part of the decommitments but only the $\vec{s}_j$'s, as the verifier can actually compute all $\projmod{q}(\vec{p}_j)$ by themselves and the $\projmod{q}(\vec{p}_j)$ uniquely determine the $\vec{p}_j$. This means that only $\bigl(\tau\limbs + \xi\limbs'\bigr)n\cdot \ceil{\log(2\eta+1)}$ bits need to be transmitted.
+% In the full version\cite{TODO}, we present a generalization of this trick that can also be applied to aggregated decommitments.
 
 \begin{table}\centering
  \begin{tabular}{cc@{\hskip 3.5ex}l}
