Undo/fix some of Zhenfei's fixes

--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -47,14 +47,14 @@ Let us now explain how our encoding and decoding is connected to Babai's algorit
 % Note that, to keep our exposition self-contained, both our actual algorithm in \autoref{fig:EncodingCoeff} and its analysis make no mention of this connection and can be understood without it.
 The problem we need to solve is to encode some $\vec{v}\in\coset = \vec{t} + \latgeneral$ by encoding $\overline{\vec{v}}$, where short $\vec{v}$ should correspond to short(er) $\overline{\vec{v}}$. Here, $\latgeneral$ can be an arbitrary (full-rank) lattice at first that we will later take to be $\latmodular$. Let us assume we have some pre-agreed basis $\kernelbasis = \{\vec{b}_1,\vec{b}_2,\ldots\}$ for $\latgeneral$, either over $\ZZ$ or (if $\latgeneral$ is a free $\ring$-module) over our ring $\ring$.
 
-The most simple idea, corresponding to what's called Babai rounding, is to deterministically (so both encoder and decoder agree on it) determine some $\tref$ from $\hint$ respect to $\coset$ such that $\coset = \tref + \latgeneral$. Then $\vec{v} - \tref \in \latgeneral$ and we can simply encode $\vec{v}$ by the coordinate vector $(\alpha_1,\alpha_2\ldots)$ of $\vec{v}-\tref$ with respect to the basis $\kernelbasis$.
+The most simple idea, corresponding to what's called Babai rounding, is to deterministically (so both encoder and decoder agree on it) determine some $\tref$ from $\hint$, or ,equivalently, from $\coset$, such that $\coset = \tref + \latgeneral$. Then $\vec{v} - \tref \in \latgeneral$ and we can simply encode $\vec{v}$ by the coordinate vector $(\alpha_1,\alpha_2\ldots)$ of $\vec{v}-\tref$ with respect to the basis $\kernelbasis$.
 
 How good this is (i.e.\ how small the $\alpha_i$ are) depends on both how ``good'' the basis $\kernelbasis$ is and how we choose $\tref$. For the latter, we want $\vec{v}-\tref$ to be small, so $\tref$ should itself be small. One way (if working with a $\ZZ$-basis) called Babai rounding to choose $\tref$ is to set $\tref = \sum_i  t_i\vec{b}_i$ with all real-valued) coeffients $-\tfrac12 < t_i \leq \tfrac12$. Observe that we have $\vec{v} = \sum_i (t_i + \alpha_i)\vec{b}_i$. \znote{should this be $\vec{v} = \vec{t} + \sum_i (t_i + \alpha_i)\vec{b}_i$ as $\vec{v} = \vec{t} + \latgeneral$?} This means that this approach essentially computes the $\alpha_i$ by writing $\vec{v}$ with respect to $\kernelbasis$ and rounding the coefficients to the nearest integers.
 
 Note that this approach first computes a short reference $\tref\in\coset$ in some way and then separately encodes $\vec{v}$ by encoding the difference.
 An equivalent, useful view, is to consider this as a single algorithm akin to lattice enumeration: we want to output not just a single short vector $\tref$ of a lattice coset, but rather enumerate (candidate) short vectors $\vec{v}$. For this, we don't set a single $t_i$'s with $-\tfrac12 < t_i \leq \tfrac12$, but rather enumerate possible candidate short vectors by also trying larger values of $t_i$, parameterized by $\alpha_i$'s. In lattice enumeration, where the goal is to find a vector as short as possible, we usually try a large number of such candidates and settle for the shortest one we found (usually, this takes super-polynomial time). Here, we are given $\vec{v}$ and we encode $\vec{v}$ by the branch (parameterized by $\alpha_i$) a lattice enumeration algorithm would need to take to output $\vec{v}$.
 
-This point of view lets us use Babai's algorithm proper rather than the more naive Babai rounding: here, we (greedily) choose coefficients w.r.t.\ a given basis $\kernelbasis$, but differently to Babai rounding, we choose coefficients one-by-one and
+This point of view lets us use Babai's algorithm proper rather than the more naive Babai rounding: here, we (greedily) choose coefficients wrt.\ a given basis $\kernelbasis$, but differently to Babai rounding, we choose coefficients one-by-one and
 our choices are affected by the previous choice.
 
 For a recursive description of Babai's algorithm / enumeration, pick one%
