--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -45,7 +45,7 @@ Before formally defining our encoding and decoding algorithms, let us give some 
 % In our notation the $B$ in $\latencode$ and $\latdecode$ is for Babai.
 Let us now explain how our encoding and decoding is connected to Babai's algorithm~\cite{DBLP:journals/combinatorica/Babai86} (more precisely, the generalization in~\cite{RSA:LinPei11}) and lattice enumeration.
 % Note that, to keep our exposition self-contained, both our actual algorithm in \autoref{fig:EncodingCoeff} and its analysis make no mention of this connection and can be understood without it.
-The problem we need to solve is to encode some $\vec{v}\in\coset = \vec{t} + \latgeneral$ by encoding $\overline{\vec{v}}$, where short $\vec{v}$ should correspond to short(er) $\overline{\vec{v}}$. Here, $\latgeneral$ can be an arbitrary (full-rank) lattice at first that we will later take to be $\latmodular$. Let us assume we have some pre-agreed basis $\kernelbasis = \{\vec{b}_1,\vec{b}_2,\ldots\}$ for $\latgeneral$, either over $\ZZ$ or (if $\latgeneral$ is a free $\ring$-module) over our ring $\ring$.
+The problem we need to solve is to encode some $\vec{v}\in\coset = \vec{t} + \latgeneral$ via an encoding $\overline{\vec{v}}$, where short $\vec{v}$ should correspond to short(er) $\overline{\vec{v}}$. Here, $\latgeneral$ can be an arbitrary (full-rank) lattice at first that we will later take to be $\latmodular$. Let us assume we have some pre-agreed basis $\kernelbasis = \{\vec{b}_1,\vec{b}_2,\ldots\}$ for $\latgeneral$, either over $\ZZ$ or (if $\latgeneral$ is a free $\ring$-module) over our ring $\ring$.
 
 The most simple idea, corresponding to what's called Babai rounding, is to deterministically (so both encoder and decoder agree on it) determine some $\tref$ from $\hint$, or ,equivalently, from $\coset$, such that $\coset = \tref + \latgeneral$. Then $\vec{v} - \tref \in \latgeneral$ and we can simply encode $\vec{v}$ by the coordinate vector $(\alpha_1,\alpha_2\ldots)$ of $\vec{v}-\tref$ with respect to the basis $\kernelbasis$.
 
