--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -36,7 +36,7 @@ for any given output of Ajtai's hash function, which we will denote as $\hint\in
 
 Ignoring any size constraints, for a given $\hint\in\ring_q$, the set of solutions to $\projmod{q}(\vec{p}_i) = \hint$ is a lattice coset $\coset$ of the form $\coset = \latmodular + \vec{t}$, where $\latmodular \coloneqq \{\vec{x}\in\ring^\limbs \mid \projring(\vec{x})\bmod q = 0\}$, with $\limbs = \ceil{\log_{2\eta+1}q}$. The vector $\vec{t}$ depends on $\hint$.
 Note that while the coset $\coset$ is uniquely determined by $\hint$, there are multiple possible choices for $\vec{t}$. The different possible choices differ exactly by elements from $\latmodular$.
-Our task now boils down to effciently encode small elements $\vec{p}_{i}$ (in $\norm{.}_{\infty}$-norm) from this lattice coset $\coset$. Both encoder and decoder know $\hint$ (and hence $\coset$) from hashing the child nodes; note that for notational convenience, our encoder defined in \autoref{fig:EncodingCoeff} instead determines $\hint$ by computing $\projmod{q}(\vec{p}_i)$.
+Our task now boils down to efficiently encode small elements $\vec{p}_{i}$ (in $\norm{.}_{\infty}$-norm) from this lattice coset $\coset$. Both encoder and decoder know $\hint$ (and hence $\coset$) from hashing the child nodes; note that for notational convenience, our encoder defined in \autoref{fig:EncodingCoeff} instead determines $\hint$ by computing $\projmod{q}(\vec{p}_i)$.
 
 \medskip
 Before formally defining our encoding and decoding algorithms, let us give some more informal remark that explains the basic idea and how it relates to Babai's algorithm and lattice enumeration. Note that our actual algorithm in \autoref{fig:EncodingCoeff} and its formal analysis given below will be fully self-contained and do not rely on this remark in any way.
@@ -47,9 +47,9 @@ Let us now explain how our encoding and decoding is connected to Babai's algorit
 % Note that, to keep our exposition self-contained, both our actual algorithm in \autoref{fig:EncodingCoeff} and its analysis make no mention of this connection and can be understood without it.
 The problem we need to solve is to encode some $\vec{v}\in\coset = \vec{t} + \latgeneral$ via an encoding $\overline{\vec{v}}$, where short $\vec{v}$ should correspond to short(er) $\overline{\vec{v}}$. Here, $\latgeneral$ can be an arbitrary (full-rank) lattice at first that we will later take to be $\latmodular$. Let us assume we have some pre-agreed basis $\kernelbasis = \{\vec{b}_1,\vec{b}_2,\ldots\}$ for $\latgeneral$, either over $\ZZ$ or (if $\latgeneral$ is a free $\ring$-module) over our ring $\ring$.
 
-The most simple idea, corresponding to what's called Babai rounding, is to deterministically (so both encoder and decoder agree on it) determine some $\tref$ from $\hint$, or ,equivalently, from $\coset$, such that $\coset = \tref + \latgeneral$. Then $\vec{v} - \tref \in \latgeneral$ and we can simply encode $\vec{v}$ by the coordinate vector $(\alpha_1,\alpha_2\ldots)$ of $\vec{v}-\tref$ with respect to the basis $\kernelbasis$.
+The most simple idea, corresponding to what's called Babai rounding, is to deterministically (so both encoder and decoder agree on it) determine some $\tref$ from $\hint$, or, equivalently, from $\coset$, such that $\coset = \tref + \latgeneral$. Then $\vec{v} - \tref \in \latgeneral$ and we can encode $\vec{v}$ by the coordinate vector $(\alpha_1,\alpha_2\ldots)$ of $\vec{v}-\tref$ with respect to the basis $\kernelbasis$.
 
-How good this is (i.e.\ how small the $\alpha_i$ are) depends on both how ``good'' the basis $\kernelbasis$ is and how we choose $\tref$. For the latter, we want $\vec{v}-\tref$ to be small, so $\tref$ should itself be small. One way (if working with a $\ZZ$-basis) called Babai rounding to choose $\tref$ is to set $\tref = \sum_i  t_i\vec{b}_i$ with all real-valued) coeffients $-\tfrac12 < t_i \leq \tfrac12$. Observe that we have $\vec{v} = \sum_i (t_i + \alpha_i)\vec{b}_i$.
+How good this is (i.e.\ how small the $\alpha_i$ are) depends on both how ``good'' the basis $\kernelbasis$ is and how we choose $\tref$. For the latter, we want $\vec{v}-\tref$ to be small, so $\tref$ should itself be small. One way (phrased for a $\ZZ$-basis for simplicity) called Babai rounding to choose $\tref$ is to set $\tref = \sum_i  t_i\vec{b}_i$ with real-valued coefficients $-\tfrac12 < t_i \leq \tfrac12$. Observe that we have $\vec{v} = \sum_i (t_i + \alpha_i)\vec{b}_i$.
 % \znote{should this be $\vec{v} = \vec{t} + \sum_i (t_i + \alpha_i)\vec{b}_i$ as $\vec{v} = \vec{t} + \latgeneral$?} %%% Gotti: v - t has coos \alpha_i, t has coos t_i, so v has coos \alpha_i + t_i.
 This means that this approach essentially computes the $\alpha_i$ by writing $\vec{v}$ with respect to $\kernelbasis$ and rounding the coefficients to the nearest integers.
 
@@ -62,10 +62,10 @@ our choices are affected by the previous choice.
 For a recursive description of Babai's algorithm / enumeration, pick one%
 \footnote{The choice of $\vec{b}_\qbasis$ matters. This algorithm is typically applied to bases $(\vec{b}_1,\ldots)$ obtained from lattice reduction. Lattice reduction outputs an ordered basis and with the ordering convention from lattice reduction, the appropriate choice for Babai's algorithm is to choose the \emph{last} basis element as $\vec{b}_\qbasis$}
 of the basis vectors $\vec{b}_\qbasis\in\kernelbasis$ and decompose $\kernelbasis$ into a disjoint union
-$\kernelbasis = \{\vec{b}_\qbasis\}\cup \kernelbasis'$. This decomposes $\latgeneral$ as $\latgeneral = \latgeneral'\oplus \Span\vec{b}_{\qbasis}$, where $\latgeneral'$ is the lattice generated by $\kernelbasis'$. We now choose $\tref^{(1)}\in\coset$ and then pick the unique $\alpha_\qbasis$ such that $\vec{v} \in \alpha_\qbasis\vec{b}_\qbasis + \tref^{(1)} + \latgeneral'$. This is similar to the approach before, except that now we only determine a single coefficient $\alpha_\qbasis$. Note that the choice of $\tref^{(1)}$ only matters modulo $\latgeneral'$, so only the single (real-valued) $\vec{b}_\qbasis$-component of $\tref^{(1)}$ matters. This is hence a 1-dimensional problem and Babai's algorithm (which only works for $\ZZ$-coeffients and is designed for the $\norm{.}_2$-norm) chooses $\tref^{(1)}$ such that the $\norm{.}_2$-distance between $\tref^{(1)}$ and $\Span_{\RR}\kernelbasis'$ is minimized (with some arbitrary determistic tie-breakers).
-We then recurse into the new problem instance given by $\vec{v} \in \coset'$ with $\coset' = \latgeneral' + \alpha_\qbasis\vec{b}_\qbasis + \tref^{(1)}$ of dimension 1 less than the original. Note that to get a full-rank lattice, we may orthogonally project out the orthgonal complement to $\Span_\RR\latgeneral'$. The 0-dimensional base case is trivial. Babai's algorithm itself only considers $\alpha_\qbasis = 0$, lattice enumeration branches into several candidate $\alpha_\qbasis$ and our approach sets $\alpha_\qbasis$ from $\vec{v}$. Importantly, the next $\tref^{(2)}$ chosen in the next step during the recursion depends on $\coset'$ and hence on the previous choice of $\alpha_\qbasis$.
+$\kernelbasis = \{\vec{b}_\qbasis\}\cup \kernelbasis'$. This decomposes $\latgeneral$ as $\latgeneral = \latgeneral'\oplus \Span\vec{b}_{\qbasis}$, where $\latgeneral'$ is the lattice generated by $\kernelbasis'$. We now choose $\tref^{(1)}\in\coset$ and then pick the unique $\alpha_\qbasis$ such that $\vec{v} \in \alpha_\qbasis\vec{b}_\qbasis + \tref^{(1)} + \latgeneral'$. This is similar to the approach before, except that now we only determine a single coefficient $\alpha_\qbasis$. Note that the choice of $\tref^{(1)}$ only matters modulo $\latgeneral'$, so only the single (real-valued) $\vec{b}_\qbasis$-component of $\tref^{(1)}$ matters. This is hence a 1-dimensional problem and Babai's algorithm (which only works for $\ZZ$-coefficients and is designed for the $\norm{.}_2$-norm) chooses $\tref^{(1)}$ such that the $\norm{.}_2$-distance between $\tref^{(1)}$ and $\Span_{\RR}\kernelbasis'$ is minimized (with some arbitrary deterministic tie-breakers).
+We then recurse into the new problem instance given by $\vec{v} \in \coset'$ with $\coset' = \latgeneral' + \alpha_\qbasis\vec{b}_\qbasis + \tref^{(1)}$ of dimension 1 less than the original. Note that to get a full-rank lattice, we may orthogonally project out the orthogonal complement to $\Span_\RR\latgeneral'$. The 0-dimensional base case is trivial. Babai's algorithm itself only considers $\alpha_\qbasis = 0$, lattice enumeration branches into several candidate $\alpha_\qbasis$ and our approach sets $\alpha_\qbasis$ from $\vec{v}$. Importantly, the next $\tref^{(2)}$ chosen in the next step during the recursion depends on $\coset'$ and hence on the previous choice of $\alpha_\qbasis$.
 
-For our problem with $\latgeneral = \latmodular$ and $\coset$ determined by $\hint\in\ring_q$, we do not work over the $\norm{.}_2$-norm, but rather the $\norm{.}_\infty$-norm. Fortunately, our lattice has a very good basis for this norm (close to the coordinate axes). We take a very similar general approach, but instead of choosing $\tref^{(1)}$ via a $\norm{.}_2$-minimization problem, we directly choose $\tref^{(1)} \coloneqq \decompmod{q}(\hint)$. Note that this equals $\tref^{(1)}=\decompmod{q}(\projmod{q}(\vec{v}))$. In the next recusion step, we set $\tref^{(2)}$ as $\decompring(\projring(\vec{v}))$. Note here that our basis element $\vec{b}_\qbasis$ in the first step is given by $(q,0,0,\ldots)$. Essentially, determining $\alpha_\qbasis$ in the first recursion step allows us to ``update'' the information $\hint$ we are given from something modulo $q$ to something unreduced, which helps the algorithm by choosing a better $\tref^{(2)}$.
+For our problem with $\latgeneral = \latmodular$ and $\coset$ determined by $\hint\in\ring_q$, we do not work over the $\norm{.}_2$-norm, but rather the $\norm{.}_\infty$-norm. Fortunately, our lattice has a very good basis for this norm (close to the coordinate axes). We take a very similar general approach, but instead of choosing $\tref^{(1)}$ via a $\norm{.}_2$-minimization problem, we directly choose $\tref^{(1)} \coloneqq \decompmod{q}(\hint)$. Note that this equals $\tref^{(1)}=\decompmod{q}(\projmod{q}(\vec{v}))$. In the next recursion step, we set $\tref^{(2)}$ as $\decompring(\projring(\vec{v}))$. Note here that our basis element $\vec{b}_\qbasis$ in the first step is given by $(q,0,0,\ldots)$. Essentially, determining $\alpha_\qbasis$ in the first recursion step allows us to ``update'' the information $\hint$ we are given from something modulo $q$ to something unreduced, which helps the algorithm by choosing a better $\tref^{(2)}$.
 Our algorithm does not need to perform any orthogonal projections and works over $\ring$. We also only perform this recursive step once and use the Babai rounding approach after one step; the reason is that the shape of our basis is so good that this is good enough.
 
 % We mention that our formal descripion in \autoref{fig:EncodingCoeff} of the algorithm is self-contained and actually makes no explicit mention of $\tref^{(1)}$ or $\tref^{(2)}$. However, it is easy to see that (in the notation given in the algorithm) $\deltav = \vec{v}-\tref^{(2)}$ and we just encode that by coefficients as in Babai rounding. With $\tref^{(1)}=\decompmod{q}(\hint)$, the approach described above finds $\tilde{\alpha}_\qbasis$ such that $\vec{v} = \alpha_\qbasis\vec{b}_\qbasis + \decompmod{q}(\hint) + \vec{v}'$ with $\vec{v}'\in\\latgeneral' = \latring$. With
@@ -225,7 +225,7 @@ Formally, we define encoding and decoding algorithms $\latencode$ and $\latdecod
 \end{figure}
 
 \begin{remark}
-We mention that our formal descripion in \autoref{fig:EncodingCoeff} of the algorithm is self-contained and actually makes no explicit mention of $\tref^{(1)}$ or $\tref^{(2)}$ as defined in \autoref{rmk:RelationshipToBabai}. However, it is easy to see that (in the notation given in the algorithm) $\deltav = \vec{v}-\tref^{(2)}$ and we just encode that by coefficients as in Babai rounding. With $\tref^{(1)}=\decompmod{q}(\hint)$, the definition of $\alpha_\qbasis$ given in \autoref{rmk:RelationshipToBabai} means that this $\alpha_\qbasis$ is such that $\vec{v} = \alpha_\qbasis\vec{b}_\qbasis + \decompmod{q}(\hint) + \vec{v}'$ with $\vec{v}'\in\latgeneral' = \latring$.
+We mention that our formal description in \autoref{fig:EncodingCoeff} of the algorithm is self-contained and actually makes no explicit mention of $\tref^{(1)}$ or $\tref^{(2)}$ as defined in \autoref{rmk:RelationshipToBabai}. However, it is easy to see that (in the notation given in the algorithm) $\deltav = \vec{v}-\tref^{(2)}$ and we just encode that by coefficients as in Babai rounding. With $\tref^{(1)}=\decompmod{q}(\hint)$, the definition of $\alpha_\qbasis$ given in \autoref{rmk:RelationshipToBabai} means that this $\alpha_\qbasis$ is such that $\vec{v} = \alpha_\qbasis\vec{b}_\qbasis + \decompmod{q}(\hint) + \vec{v}'$ with $\vec{v}'\in\latgeneral' = \latring$.
 
 Observe that $\projring(\vec{b}_\qbasis) = q$, $\projring(\decompmod{q}(\hint)) = \hint'$ and $\projring(\vec{v}') = 0$. This gives
 \[
