--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -66,7 +66,7 @@ $\kernelbasis = \{\vec{b}_\qbasis\}\cup \kernelbasis'$. This decomposes $\latgen
 We then recurse into the new problem instance given by $\vec{v} \in \coset'$ with $\coset' = \latgeneral' + \alpha_\qbasis\vec{b}_\qbasis + \tref^{(1)}$ of dimension 1 less than the original. Note that to get a full-rank lattice, we may orthogonally project out the orthogonal complement to $\Span_\RR\latgeneral'$. The 0-dimensional base case is trivial. Babai's algorithm itself only considers $\alpha_\qbasis = 0$, lattice enumeration branches into several candidate $\alpha_\qbasis$ and our approach sets $\alpha_\qbasis$ from $\vec{v}$. Importantly, the next $\tref^{(2)}$ chosen in the next step during the recursion depends on $\coset'$ and hence on the previous choice of $\alpha_\qbasis$.
 
 For our problem with $\latgeneral = \latmodular$ and $\coset$ determined by $\hint\in\ring_q$, we do not work over the $\norm{.}_2$-norm, but rather the $\norm{.}_\infty$-norm. Fortunately, our lattice has a very good basis for this norm (close to the coordinate axes). We take a very similar general approach, but instead of choosing $\tref^{(1)}$ via a $\norm{.}_2$-minimization problem, we directly choose $\tref^{(1)} \coloneqq \decompmod{q}(\hint)$. Note that this equals $\tref^{(1)}=\decompmod{q}(\projmod{q}(\vec{v}))$. In the next recursion step, we set $\tref^{(2)}$ as $\decompring(\projring(\vec{v}))$. Note here that our basis element $\vec{b}_\qbasis$ in the first step is given by $(q,0,0,\ldots)$. Essentially, determining $\alpha_\qbasis$ in the first recursion step allows us to ``update'' the information $\hint$ we are given from something modulo $q$ to something unreduced, which helps the algorithm by choosing a better $\tref^{(2)}$.
-Our algorithm does not need to perform any orthogonal projections and works over $\ring$. We also only perform this recursive step once and use the Babai rounding approach after one step; the reason is that the shape of our basis is so good that this is good enough.
+Our algorithm does not need to perform any orthogonal projections and works over $\ring$. We also only perform this recursive step once and use the Babai rounding approach after one step; the reason is that the shape of our basis is so good that this is sufficient.
 
 % We mention that our formal descripion in \autoref{fig:EncodingCoeff} of the algorithm is self-contained and actually makes no explicit mention of $\tref^{(1)}$ or $\tref^{(2)}$. However, it is easy to see that (in the notation given in the algorithm) $\deltav = \vec{v}-\tref^{(2)}$ and we just encode that by coefficients as in Babai rounding. With $\tref^{(1)}=\decompmod{q}(\hint)$, the approach described above finds $\tilde{\alpha}_\qbasis$ such that $\vec{v} = \alpha_\qbasis\vec{b}_\qbasis + \decompmod{q}(\hint) + \vec{v}'$ with $\vec{v}'\in\\latgeneral' = \latring$. With
 
